feat(table): add delete table
